--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start:dev": "nodemon src/index.ts",
-    "build": "tsc src/index.ts"
+    "start:dev": "nodemon src/index.js",
+    "build": "tsc src/index.ts -w"
   },
   "author": "svetlana-tyshkevich",
   "license": "ISC",
