--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "crud-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/app.ts",
   "scripts": {
-    "start:dev": "nodemon src/index.js",
-    "build": "tsc src/index.ts -w"
+    "start:dev": "nodemon src/app.ts",
+    "start:prod": "webpack --mode production && node ./dist/bundle.js",
+    "build": "tsc src/app.ts -w",
+    "test": "jest --silent"
   },
   "author": "svetlana-tyshkevich",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^16.11.12",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -22,8 +26,11 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
